# RuSSH

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  deadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef  openssh-server_1%3a9.2p1-2+deb12u7_amd64.deb  openssh_9.2p1-2+deb12u7.debian.tar.xz  openssh_9.2p1-2+deb12u7.dsc
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
crates/russh-auth/: Cargo.toml
crates/russh-auth/src/: lib.rs
crates/russh-channel/: Cargo.toml
crates/russh-channel/benches/: channel_encoding.rs
crates/russh-channel/src/: lib.rs  socks.rs
crates/russh-cli/: Cargo.toml
crates/russh-cli/src/: lib.rs
crates/russh-config/: Cargo.toml
crates/russh-config/src/: lib.rs
crates/russh-core/: Cargo.toml
crates/russh-core/src/: lib.rs
crates/russh-crypto/: Cargo.toml
crates/russh-crypto/src/: lib.rs
crates/russh-integration/: Cargo.toml
crates/russh-integration/src/: lib.rs
crates/russh-net/: Cargo.toml
crates/russh-net/benches/: packet_roundtrip.rs
crates/russh-net/src/: agent.rs  lib.rs
crates/russh-observability/: Cargo.toml
crates/russh-observability/src/: lib.rs
crates/russh-scp/: Cargo.toml
crates/russh-scp/src/: lib.rs
crates/russh-sftp/: Cargo.toml
crates/russh-sftp/src/: lib.rs
crates/russh-transport/: Cargo.toml
crates/russh-transport/src/: lib.rs
crates/russh-web/: Cargo.toml
crates/russh-web-wasm/: Cargo.toml  README.md
crates/russh-web-wasm/src/: lib.rs
crates/russh-web/src/: index.html  lib.rs
crates/russh-web/src/pkg/: russh_web_wasm.d.ts  russh_web_wasm.js  russh_web_wasm_bg.wasm  russh_web_wasm_bg.wasm.d.ts
docs/: ARCHITECTURE.md  implementation-status.md  roadmap.md  threat-model.md  web.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_auth_parse.rs  fuzz_config_parse.rs  fuzz_packet_codec.rs
openssh-9.2p1/: kex.c  kex.h  krl.c  log.c  session.c  ssh-agent.c  ssh_config.5  sshconnect2.c  sshd_config.5  sshsig.c
openssh-9.2p1/.pc/: applied-patches
openssh-9.2p1/.pc/CVE-2023-48795.patch/: sshconnect2.c
openssh-9.2p1/.pc/CVE-2025-26465.patch/: sshconnect2.c
openssh-9.2p1/.pc/incorrect-return-values.patch/: sshconnect2.c
openssh-9.2p1/debian/: .git-dpm  changelog  salsa-ci.yml
openssh-9.2p1/debian/patches/: CVE-2023-28531.patch  CVE-2023-38408-1.patch  CVE-2023-38408-2.patch  CVE-2023-38408-3.patch  CVE-2023-48795.patch  CVE-2023-51384.patch  CVE-2023-51385.patch  CVE-2025-26465.patch  Disable-async-signal-unsafe-code-from-the-sshsigdie-.patch  authorized-keys-man-symlink.patch  conch-ssh-rsa.patch  debian-banner.patch  debian-config.patch  dnssec-sshfp.patch  doc-hash-tab-completion.patch  fix-disable-forwarding.patch  gnome-ssh-askpass2-icon.patch  gssapi.patch  incorrect-return-values.patch  keepalive-extensions.patch  maxhostnamelen.patch  mention-ssh-keygen-on-keychange.patch  no-openssl-version-status.patch  openbsd-docs.patch  openssl-3-abi-compatibility-test.patch  openssl-3-abi-compatibility.patch  package-versioning.patch  remove-spurious-ssh-agent-options.patch  restore-authorized_keys2.patch  restore-tcp-wrappers.patch  revert-ipqos-defaults.patch  scp-quoting.patch  selinux-role.patch  shell-path.patch  sntrup761x25519-sha512.patch  ssh-agent-setgid.patch  ssh-argv0.patch  ssh-vulnkey-compat.patch  syslog-level-silent.patch  systemd-readiness.patch  (+2 more)
openssh-9.2p1/debian/tests/: control
scripts/: run_web_local.sh  test_web.sh
