[workspace]
resolver = "2"
members = [
    "crates/russh-auth",
    "crates/russh-channel",
    "crates/russh-cli",
    "crates/russh-config",
    "crates/russh-core",
    "crates/russh-crypto",
    "crates/russh-integration",
    "crates/russh-net",
    "crates/russh-observability",
    "crates/russh-scp",
    "crates/russh-sftp",
    "crates/russh-transport",
]
exclude = ["fuzz"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/russh"
authors = ["RuSSH Contributors"]

[workspace.dependencies]
tracing = "0.1"
metrics = "0.23"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
sha2 = "0.10"
hmac = "0.12"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
getrandom = "0.2"
rand_core = { version = "0.6", features = ["getrandom"] }
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "sync", "macros", "time"] }
zeroize = { version = "1", features = ["derive"] }
subtle = "2"

[workspace.lints.rust]
unsafe_code = "deny"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
