[package]
name = "russh-auth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
gssapi = []

[lints]
workspace = true

[dependencies]
russh-core = { path = "../russh-core" }
russh-crypto = { path = "../russh-crypto" }
subtle.workspace = true
