[package]
name = "russh-channel"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
russh-core = { path = "../russh-core" }
russh-transport = { path = "../russh-transport" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "channel_encoding"
harness = false
