[package]
name = "russh-cli"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line SSH client and server binaries for RuSSH"

[lints]
workspace = true

[dependencies]
russh-core   = { path = "../russh-core" }
russh-crypto = { path = "../russh-crypto" }
russh-net    = { path = "../russh-net" }
russh-transport = { path = "../russh-transport" }
russh-auth   = { path = "../russh-auth" }
russh-observability = { path = "../russh-observability" }
russh-config = { path = "../russh-config" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
crossterm = "0.28"

[[bin]]
name = "russh"
path = "src/bin/russh.rs"

[[bin]]
name = "russhd"
path = "src/bin/russhd.rs"
