[package]
name = "russh-crypto"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
test-utils = []

[dependencies]
russh-core = { path = "../russh-core" }
aes-gcm.workspace = true
aes.workspace = true
ctr.workspace = true
chacha20poly1305.workspace = true
chacha20.workspace = true
sha2.workspace = true
hmac.workspace = true
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
p256.workspace = true
p384.workspace = true
p521.workspace = true
rsa.workspace = true
getrandom.workspace = true
rand_core.workspace = true
zeroize.workspace = true
subtle.workspace = true
