[package]
name = "russh-net"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Async tokio networking layer for RuSSH"

[lints]
workspace = true

[dependencies]
russh-auth    = { path = "../russh-auth" }
russh-channel = { path = "../russh-channel" }
russh-core    = { path = "../russh-core" }
russh-crypto  = { path = "../russh-crypto" }
russh-scp     = { path = "../russh-scp" }
russh-sftp    = { path = "../russh-sftp" }
russh-transport = { path = "../russh-transport" }
russh-observability = { path = "../russh-observability" }
tokio.workspace = true
tracing.workspace = true
flate2.workspace = true
socket2.workspace = true

[target.'cfg(unix)'.dependencies]
pty-process = { version = "0.4", features = ["async"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "packet_roundtrip"
harness = false
