[package]
name = "russh-observability"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
tracing = ["dep:tracing"]
metrics = ["dep:metrics"]

[dependencies]
russh-core = { path = "../russh-core" }
tracing = { version = "0.1", optional = true }
metrics = { version = "0.23", optional = true }
