[package]
name = "russh-scp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
russh-core = { path = "../russh-core" }
russh-channel = { path = "../russh-channel" }
filetime = { workspace = true }
