[package]
name = "russh-web-wasm"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "=0.3.69"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "=0.2.92"
wasm-bindgen-futures = "=0.4.42"
web-sys = { version = "=0.3.69", features = [
  "BinaryType",
  "CloseEvent",
  "ErrorEvent",
  "Event",
  "MessageEvent",
  "WebSocket",
] }
russh-auth = { path = "../russh-auth" }
russh-channel = { path = "../russh-channel" }
russh-core = { path = "../russh-core" }
russh-crypto = { path = "../russh-crypto" }
russh-transport = { path = "../russh-transport" }
tokio = { version = "1", default-features = false, features = ["io-util", "sync", "macros"] }
tracing = "0.1"

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[workspace]
