[package]
name = "russh-web"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Browser-based SSH terminal powered by RuSSH, xterm.js, and WebSocket"

[lints]
workspace = true

[dependencies]
russh-core       = { path = "../russh-core" }
russh-crypto     = { path = "../russh-crypto" }
russh-net        = { path = "../russh-net" }
russh-transport  = { path = "../russh-transport" }
russh-observability = { path = "../russh-observability" }
tokio   = { workspace = true }
axum    = { version = "0.8", features = ["ws"] }
serde   = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "russh-web"
path = "src/bin/russh_web.rs"
